syntax = "proto3";

package pb;

option go_package = "portfolio/server-grpc/pb"; 

import "google/protobuf/timestamp.proto";

message Empty {
    bool onStatus = 1;
}

message ServiceReq { 
    string title = 1;
    string description = 2;
    string logo = 3;
}

message ServiceRes {
    string id = 1;
    string title = 2;
    string description = 3;
    string logo = 4;
    int32 status = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}

message EduSkillReq {
    string education_id = 2; // uuid
    string name = 3;    
    int32 percentage = 4;
}

message EduSkillRes {
    string id = 1; // uuid
    string education_id = 2; // uuid
    string name = 3;    
    int32 percentage = 4;
}

message EduReq {
    // string id = 1; // uuid
    string school = 2;
    string course = 3;
    string started = 4;
    string ended = 5;
    string description = 6;
    // int32 status = 7;
    repeated EduSkillReq skills = 8;
}

message EduRes {
    string id = 1; // uuid
    string school = 2;
    string course = 3;
    string started = 4;
    string ended = 5;
    string description = 6;
    repeated EduSkillRes skills = 7;
    int32 status = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    google.protobuf.Timestamp deleted_at = 11;
}

message ExpSkillRes {
    string id = 1; // uuid
    string name = 2; 
    int32 percentage = 3;
    string experience_id = 4;
}

message ExpSkillReq {
    string name = 1; 
    int32 percentage = 2;
    string experience_id = 3;
}

message ExpReq {
    // string id = 1; // uuid
    string company = 2;
    string title = 3;
    string location = 4;
    string started = 5;
    string ended = 6;
    // int32 status = 7;
    repeated string descriptions = 8;
    repeated ExpSkillReq skills = 9;
}


message ExpRes {
    string id = 1; // uuid
    string company = 2;
    string title = 3;
    string location = 4;
    string started = 5;
    string ended = 6;
    repeated string descriptions = 7;
    int32 status = 8;
    repeated ExpSkillRes skills = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
    google.protobuf.Timestamp deleted_at = 12;
}

message UserRes {
    string id = 1; // uuid
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string address = 5;
    string description = 6;
    string email = 7;
    string username = 8;
    string password = 9;
    string resume_pdf = 10;
    string resume_docx = 11;
    int32 isdownloadable = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    google.protobuf.Timestamp deleted_at = 15;
}

message UserReq {
    string id = 1; // uuid
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string address = 5;
    string description = 6;
    string email = 7;
    string username = 8;
    string password = 9;
    string resume_pdf = 10;
    string resume_docx = 11;
    int32 isdownloadable = 12;
}

message SessionReq {
    string id = 1; // uuid
    string user_id = 2; // uuid
    string email = 3;
    string refresh_token = 4;
    bool is_revoked = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp expires_at = 7;
}

message SessionRes {
    string id = 1; // uuid
    string user_id = 2; // uuid
    string email = 3;
    string refresh_token = 4;
    bool is_revoked = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp expires_at = 7;
}

message FileReq {
    string name = 1;
    string file = 2;
}

message IDReq {
    string id = 1;
}

message FileRes {
    string id = 1; // uuid
    string name = 2;
    string file = 3;
    google.protobuf.Timestamp created_at = 4;
}

message LinkReq {
    string link = 1;
    string type = 2;
}

message AppReq {
    string name = 1;
    string image = 2;
}

message AppRes {
    string id = 1;
    string name = 2;
    string image = 3;
    int32 status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp deleted_at = 7;
}

message LinkRes {
    string id = 1;
    string link = 2;
    string type = 3;
    int32 status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp deleted_at = 7;
}

message PortfolioReq {
    string title = 1;
    string link = 2;
    repeated string tech = 3;
    string image = 4;
}

message PortfolioRes{
    string id = 1;
    string title = 2;
    repeated string tech = 3;
    string link = 4;
    string image = 5;
    int32 status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    google.protobuf.Timestamp deleted_at = 9;
}

message WebsiteReq {
    string id = 1;
    int32 status = 2;
}

message WebsiteRes {
    string id = 1;
    int32 status = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    google.protobuf.Timestamp deleted_at = 5;
}

message TestimonialRes {
    string id = 1;
    string author = 2;
    string description = 3;
    string image = 4;
    string job = 5;
    int32 status = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    google.protobuf.Timestamp deleted_at = 9;
}

message BlogsRes {
    string id = 1;
    string title = 2;
    string date = 3;
    string description = 4;
    string link = 5;
    string image = 6;
    int32 status = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp deleted_at = 10;
}

message IdModel {
    string id = 1;
    string model = 2;
    string type = 3;
}

message MessageRes {
    string id = 1;
    string name = 2;
    string email = 3;
    string message = 4;
    int32 status = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}

message ListPortfolioRes {
    repeated PortfolioRes portfolios = 1;
}

message ListLinkRes {
    repeated LinkRes links = 1;
}

message ListSessionsRes {
    repeated SessionRes sessions = 1;
}

message ListEduRes {
    repeated EduRes educations = 1;
}

message ListFileRes {
    repeated FileRes files = 1;
}

message ListExpRes {
    repeated ExpRes experiences = 1;
}

message ListAppRes {
    repeated AppRes applications = 1;
}

message ListServiceRes {
    repeated ServiceRes services = 1;
}

message ListTestimonialRes {
    repeated TestimonialRes testimonials = 1;
}

message ListBlogsRes {
    repeated BlogsRes blogs = 1;
}

message ListMessageRes {
    repeated MessageRes messages = 1;
}

service ApiService {
    rpc GetServices(Empty) returns (ListServiceRes) {}
    rpc CreateUpdateServices(ServiceRes) returns (Empty) {}
    
    rpc CreateUpdateEducations(EduRes) returns (Empty) {}
    rpc GetEducations(Empty) returns (ListEduRes) {}
    rpc GetEducation(IDReq) returns (EduRes) {}

    rpc CreateUpdateBlogs(BlogsRes) returns (Empty) {}
    rpc GetBlogs(Empty) returns (ListBlogsRes) {}

    rpc GetUser(UserRes) returns (UserRes) {}
    rpc CreateUpdateUser(UserRes) returns (Empty) {}

    rpc CreateUpdateSession(SessionRes) returns (SessionRes) {}
    rpc GetSession(IDReq) returns (SessionRes) {}
    rpc GetSessions(Empty) returns (ListSessionsRes) {}

    rpc CreateUpdateExperiences(ExpRes) returns (Empty) {}
    rpc GetExperiences(Empty) returns (ListExpRes) {}
    rpc GetExperience(IDReq) returns (ExpRes) {}
    
    rpc CreateUpdateLinks(LinkRes) returns (Empty){}
    rpc GetLinks(Empty) returns (ListLinkRes) {}

    rpc CreateUpdateApplications(AppRes) returns (Empty) {}
    rpc GetApplications(Empty) returns (ListAppRes) {}

    rpc CreateUpdatePortfolios(PortfolioRes) returns (Empty) {}
    rpc GetPortfolios(Empty) returns (ListPortfolioRes) {}

    rpc GetWebsite(Empty) returns (WebsiteRes) {}
    rpc UpdateWebsite(WebsiteReq) returns (Empty) {}

    rpc GetMessages(Empty) returns (ListMessageRes) {}
    rpc SendMessage(MessageRes) returns (Empty) {}

    rpc GetTestimonials(Empty) returns (ListTestimonialRes) {}
    rpc CreateUpdateTestimonials(TestimonialRes) returns (Empty) {}

    rpc ToggleOrDelete(IdModel) returns (Empty) {}

    rpc GetPublicDetails(Empty) returns (UserRes) {}

    rpc DeleteFile(IDReq) returns (Empty) {}
    rpc CreateFile(FileReq) returns (Empty) {}
    rpc GetFiles(Empty) returns (ListFileRes) {}
}